// Vitest Snapshot v1

exports[`tests grid jsx > should match the snapshot 1`] = `
{
  "description": "This is an example of creating a reusable grid component and using it with external data.",
  "displayName": "grid",
  "events": [
    {
      "description": "Success event.",
      "name": "success",
      "type": {
        "names": [
          "object",
        ],
      },
    },
    {
      "description": "Error event.",
      "name": "error",
      "type": {
        "names": [
          "object",
        ],
      },
    },
  ],
  "exportName": "default",
  "methods": [
    {
      "description": "Sets the order",
      "name": "sortBy",
      "params": [
        {
          "description": "Key to order",
          "name": "key",
          "type": {
            "name": "string",
          },
        },
      ],
      "returns": {
        "description": "Test",
        "title": "returns",
        "type": {
          "name": "string",
        },
      },
      "tags": {
        "access": [
          {
            "description": "public",
            "title": "access",
          },
        ],
        "params": [
          {
            "description": "Key to order",
            "name": "key",
            "title": "param",
            "type": {
              "name": "string",
            },
          },
        ],
        "returns": [
          {
            "description": "Test",
            "title": "returns",
            "type": {
              "name": "string",
            },
          },
        ],
        "since": [
          {
            "description": "Version 1.0.1",
            "title": "since",
          },
        ],
        "version": [
          {
            "description": "1.0.5",
            "title": "version",
          },
        ],
      },
    },
  ],
  "props": [
    {
      "defaultValue": {
        "func": false,
        "value": "text",
      },
      "description": "object/array defaults should be returned from a factory function",
      "name": "msg",
      "tags": {
        "link": [
          {
            "description": "See [Wikipedia](https://en.wikipedia.org/wiki/Web_colors#HTML_color_names) for a list of color names",
            "title": "link",
          },
        ],
        "see": [
          {
            "description": "See [Wikipedia](https://en.wikipedia.org/wiki/Web_colors#HTML_color_names) for a list of color names",
            "title": "see",
          },
        ],
        "since": [
          {
            "description": "Version 1.0.1",
            "title": "since",
          },
        ],
        "version": [
          {
            "description": "1.0.5",
            "title": "version",
          },
        ],
      },
      "type": {
        "name": "string|number",
      },
    },
    {
      "description": "describe data",
      "name": "data",
      "tags": {
        "version": [
          {
            "description": "1.0.5",
            "title": "version",
          },
        ],
      },
      "type": {
        "name": "array",
      },
    },
    {
      "defaultValue": {
        "func": false,
        "value": "[{}]",
      },
      "name": "images",
      "type": {
        "name": "array",
      },
    },
    {
      "defaultValue": {
        "func": true,
        "value": "function () {}",
      },
      "description": "prop function",
      "name": "propFunc",
      "type": {
        "name": "func",
      },
    },
    {
      "description": "get columns list",
      "name": "columns",
      "type": {
        "name": "array",
      },
    },
    {
      "defaultValue": {
        "func": false,
        "value": "'example'",
      },
      "description": "filter key",
      "name": "filterKey",
      "tags": {
        "ignore": [
          {
            "description": true,
            "title": "ignore",
          },
        ],
      },
      "type": {
        "name": "string",
      },
    },
  ],
  "slots": [
    {
      "bindings": [
        {
          "name": "name",
          "title": "binding",
        },
      ],
      "description": "Use this slot header",
      "name": "header",
    },
  ],
  "tags": {
    "author": [
      {
        "description": "[Rafael](https://github.com/rafaesc92)",
        "title": "author",
      },
    ],
    "since": [
      {
        "description": "Version 1.0.1",
        "title": "since",
      },
    ],
    "version": [
      {
        "description": "1.0.5",
        "title": "version",
      },
    ],
  },
}
`;

exports[`tests grid jsx should match the snapshot 1`] = `
Object {
  "description": "This is an example of creating a reusable grid component and using it with external data.",
  "displayName": "grid",
  "events": Array [
    Object {
      "description": "Success event.",
      "name": "success",
      "type": Object {
        "names": Array [
          "object",
        ],
      },
    },
    Object {
      "description": "Error event.",
      "name": "error",
      "type": Object {
        "names": Array [
          "object",
        ],
      },
    },
  ],
  "exportName": "default",
  "methods": Array [
    Object {
      "description": "Sets the order",
      "name": "sortBy",
      "params": Array [
        Object {
          "description": "Key to order",
          "name": "key",
          "type": Object {
            "name": "string",
          },
        },
      ],
      "returns": Object {
        "description": "Test",
        "title": "returns",
        "type": Object {
          "name": "string",
        },
      },
      "tags": Object {
        "access": Array [
          Object {
            "description": "public",
            "title": "access",
          },
        ],
        "params": Array [
          Object {
            "description": "Key to order",
            "name": "key",
            "title": "param",
            "type": Object {
              "name": "string",
            },
          },
        ],
        "returns": Array [
          Object {
            "description": "Test",
            "title": "returns",
            "type": Object {
              "name": "string",
            },
          },
        ],
        "since": Array [
          Object {
            "description": "Version 1.0.1",
            "title": "since",
          },
        ],
        "version": Array [
          Object {
            "description": "1.0.5",
            "title": "version",
          },
        ],
      },
    },
  ],
  "props": Array [
    Object {
      "defaultValue": Object {
        "func": false,
        "value": "text",
      },
      "description": "object/array defaults should be returned from a factory function",
      "name": "msg",
      "tags": Object {
        "link": Array [
          Object {
            "description": "See [Wikipedia](https://en.wikipedia.org/wiki/Web_colors#HTML_color_names) for a list of color names",
            "title": "link",
          },
        ],
        "see": Array [
          Object {
            "description": "See [Wikipedia](https://en.wikipedia.org/wiki/Web_colors#HTML_color_names) for a list of color names",
            "title": "see",
          },
        ],
        "since": Array [
          Object {
            "description": "Version 1.0.1",
            "title": "since",
          },
        ],
        "version": Array [
          Object {
            "description": "1.0.5",
            "title": "version",
          },
        ],
      },
      "type": Object {
        "name": "string|number",
      },
    },
    Object {
      "description": "describe data",
      "name": "data",
      "tags": Object {
        "version": Array [
          Object {
            "description": "1.0.5",
            "title": "version",
          },
        ],
      },
      "type": Object {
        "name": "array",
      },
    },
    Object {
      "defaultValue": Object {
        "func": false,
        "value": "[{}]",
      },
      "name": "images",
      "type": Object {
        "name": "array",
      },
    },
    Object {
      "defaultValue": Object {
        "func": true,
        "value": "function () {}",
      },
      "description": "prop function",
      "name": "propFunc",
      "type": Object {
        "name": "func",
      },
    },
    Object {
      "description": "get columns list",
      "name": "columns",
      "type": Object {
        "name": "array",
      },
    },
    Object {
      "defaultValue": Object {
        "func": false,
        "value": "'example'",
      },
      "description": "filter key",
      "name": "filterKey",
      "tags": Object {
        "ignore": Array [
          Object {
            "description": true,
            "title": "ignore",
          },
        ],
      },
      "type": Object {
        "name": "string",
      },
    },
  ],
  "slots": Array [
    Object {
      "bindings": Array [
        Object {
          "name": "name",
          "title": "binding",
        },
      ],
      "description": "Use this slot header",
      "name": "header",
    },
  ],
  "tags": Object {
    "author": Array [
      Object {
        "description": "[Rafael](https://github.com/rafaesc92)",
        "title": "author",
      },
    ],
    "since": Array [
      Object {
        "description": "Version 1.0.1",
        "title": "since",
      },
    ],
    "version": Array [
      Object {
        "description": "1.0.5",
        "title": "version",
      },
    ],
  },
}
`;
